tests/parsing/type_redefinition_in_type/stderr.golden
error: redefinition of type 'b', first definition line 2 column 8
bus.fbd +3:8
   |
 3 |   type b config
   |        ^
bus.fbd +2:8
   |
 2 |   type b status
   |        ^
